@@ -122,7 +122,7 @@ AD <- function(property = NULL, parameters = NULL, T = 298.15, P = 1, isPsat = T
   f1 <- exp ( (GH2O_P - GH2O_1) / (8.31441 * T) )
   # For Psat, calculate the real liquid-vapor curve (not floored at 1 bar)
   if(isPsat) {
-    P <- water("Psat", T = T, P = "Psat", P1 = FALSE)$Psat
+    P <- water("Psat", T = T, P = "Psat", Psat_floor = NULL)$Psat
     f1[P < 1] <- P[P < 1]
   }
   f1
