@@ -10,9 +10,9 @@ Calculate thermodynamic and electrostatic properties of water.
 }
 
 \usage{
-  water(property = NULL, T = 298.15, P = "Psat", P1 = TRUE)
-  water.SUPCRT92(property=NULL, T = 298.15, P = 1, P1 = TRUE)
-  water.IAPWS95(property=NULL, T = 298.15, P = 1)
+  water(property = NULL, T = 298.15, P = "Psat", Psat_floor = 1)
+  water.SUPCRT92(property=NULL, T = 298.15, P = 1, Psat_floor = 1)
+  water.IAPWS95(property=NULL, T = 298.15, P = 1, Psat_floor = 1)
   water.DEW(property=NULL, T = 373.15, P = 1000)
 }
 
@@ -20,7 +20,7 @@ Calculate thermodynamic and electrostatic properties of water.
   \item{property}{character, computational setting or property(s) to calculate}
   \item{T}{numeric, temperature (K)}
   \item{P}{numeric, pressure (bar), or \samp{Psat} for the greater of 1 bar or the vapor-liquid saturation pressure for \H2O (when P1 is TRUE)}
-  \item{P1}{logical, if TRUE, uses the greater of 1 bar or the vapor-liquid saturation pressure for \samp{Psat}; if FALSE, uses the vapor-liquid saturation pressure for \samp{Psat}}
+  \item{Psat_floor}{numeric, the vapor-liquid saturation curve for \samp{Psat} is floored at this value (in bar); set to NULL or NA to remove the floor}
 }
 
 \details{
